@startuml

title __OBSERVERS's Class Diagram__\n

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      class CurrentUserObserver {
          {static} - currentUser : CurrentUser
          + CurrentUserObserver()
          + onChanged()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      interface UserListener {
          {abstract} + onCurrentUserChanged()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      interface FirebaseObservable {
          {abstract} + registerObserver()
          {abstract} + removeObserver()
          {abstract} + removeAllOvservers()
          {abstract} + notifyObservers()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      interface FirebaseObserver {
          {abstract} + onChanged()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      class PostsObserver {
          {static} - postHashMap : PostHashMap
          {static} + TAG : String
          + PostsObserver()
          + onChanged()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      interface PostsListener {
          {abstract} + onPostsChanged()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      class UsersObserver {
          {static} - usersHashMap : UsersHashMap
          + UsersObserver()
          + onChanged()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.observers {
      interface UsersListener {
          {abstract} + onUsersChanged()
      }
    }
  }
  

  CurrentUserObserver -up-|> Observer
  CurrentUserObserver o-- UserListener : userListener
  CurrentUserObserver +-down- UserListener
  PostsObserver -up-|> Observer
  PostsObserver o-- PostsListener : postsListener
  PostsObserver +-down- PostsListener
  UsersObserver -up-|> Observer
  UsersObserver o-- UsersListener : usersListener
  UsersObserver +-down- UsersListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
